--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 td, th {
 	border: 1px solid;
-	font-family: 'Poiret One', sans-serif, strong;
+	font-family: 'Poiret One', sans-serif;
+	font-weight: bold;
   }
  
