--- a/css/style.css
+++ b/css/style.css
@@ -2,5 +2,9 @@ td, th {
 	border: 1px solid;
 	font-family: 'Poiret One', sans-serif;
 	font-weight: 700;
+}
+  h1{
+    font-family: 'Poiret One', sans-serif;
   }
+
  
