--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,8 @@
-td, th {
+td, th, h1 {
 	border: 1px solid;
 	font-family: 'Poiret One', sans-serif;
 	font-weight: 700;
 }
-  h1{
-    font-family: 'Poiret One', sans-serif;
-  }
+
 
  
