--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body{
 #planets th:hover{
 	background-color: orange;
 }
-#planets img:hover {
+#planets planets:hover {
 	filter: grayscale(100%);
 	transition: all 0.1s linear;
 }
