--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,12 @@ body{
 }
 #planets img {
 	filter: grayscale(100%);
+	transition: all 0.1s linear;
 }
 #planets img:hover {
 	filter: grayscale(0);
-	transition: all 0.1s linear;
 }
-#planets img:hover ~ td {
+#planets td:hover ~ td {
 	background-color: blue;
 	color: white;
 	transition: all 0.1s linear;
