--- a/css/style.css
+++ b/css/style.css
@@ -27,13 +27,14 @@ body{
 	color: white;
 	transition: all 0.1s linear;
 }
-#planets {
+#planets,#Title {
 	margin: 0 auto;
 	text-align: center;
 }
 #planets img:hover ~th {
 	background-color: orange;
 }
+
 
 
 
